@@ -3,23 +3,23 @@ package dev.ultreon.quantum.desktop;
 import com.badlogic.gdx.Gdx;
 import com.badlogic.gdx.backends.lwjgl3.Lwjgl3Graphics;
 import com.badlogic.gdx.backends.lwjgl3.Lwjgl3Window;
+import com.badlogic.gdx.files.FileHandle;
 import com.badlogic.gdx.utils.GdxRuntimeException;
 import dev.ultreon.quantum.*;
 import dev.ultreon.quantum.client.QuantumClient;
+import dev.ultreon.quantum.crash.CrashCategory;
+import dev.ultreon.quantum.crash.CrashLog;
 import dev.ultreon.quantum.desktop.imgui.ImGuiOverlay;
-import dev.ultreon.quantum.js.JsLoader;
-import dev.ultreon.quantum.log.Logger;
-import dev.ultreon.quantum.python.PyLoader;
 import dev.ultreon.quantum.util.Env;
 import dev.ultreon.quantum.util.Result;
-import dev.ultreon.xeox.loader.XeoxLoader;
+import it.unimi.dsi.fastutil.longs.LongArraySet;
+import it.unimi.dsi.fastutil.longs.LongSet;
 import net.fabricmc.loader.api.FabricLoader;
 import net.fabricmc.loader.api.ModContainer;
 import net.fabricmc.loader.api.metadata.ModOrigin;
+import org.jetbrains.annotations.NotNull;
 import org.lwjgl.system.Platform;
-import org.slf4j.LoggerFactory;
 
-import javax.swing.*;
 import java.io.File;
 import java.io.IOException;
 import java.lang.management.ManagementFactory;
@@ -27,9 +27,15 @@ import java.net.URI;
 import java.net.URL;
 import java.nio.file.Path;
 import java.util.*;
+import java.util.concurrent.CompletableFuture;
+import java.util.function.BiConsumer;
+import java.util.function.BiFunction;
 import java.util.function.Consumer;
+import java.util.function.Supplier;
+import java.util.stream.Collectors;
 
 import static dev.ultreon.quantum.client.QuantumClient.crash;
+import static dev.ultreon.quantum.desktop.DesktopLauncher.LOGGER;
 
 public abstract class DesktopPlatform extends GamePlatform {
     private final Map<String, FabricMod> mods = new IdentityHashMap<>();
@@ -107,9 +113,7 @@ public abstract class DesktopPlatform extends GamePlatform {
     @Override
     public Collection<? extends Mod> getMods() {
         var list = new ArrayList<Mod>();
-        list.addAll(FabricLoader.getInstance().getAllMods().stream().map(container -> this.mods.computeIfAbsent(container.getMetadata().getId(), v -> new FabricMod(container))).toList());
-        list.addAll(JsLoader.getInstance().getMods());
-        list.addAll(PyLoader.getInstance().getMods());
+        list.addAll(FabricLoader.getInstance().getAllMods().stream().map(container -> this.mods.computeIfAbsent(container.getMetadata().getId(), v -> new FabricMod(container))).collect(Collectors.toList()));
         list.addAll(super.getMods());
         return list;
     }
@@ -126,36 +130,29 @@ public abstract class DesktopPlatform extends GamePlatform {
 
     @Override
     public Env getEnv() {
-        return switch (FabricLoader.getInstance().getEnvironmentType()) {
-            case CLIENT -> Env.CLIENT;
-            case SERVER -> Env.SERVER;
-        };
+        switch (FabricLoader.getInstance().getEnvironmentType()) {
+            case CLIENT:
+                return Env.CLIENT;
+            case SERVER:
+                return Env.SERVER;
+            default:
+                throw new IllegalArgumentException();
+        }
     }
 
     @Override
-    public Path getConfigDir() {
-        return FabricLoader.getInstance().getConfigDir();
+    public FileHandle getConfigDir() {
+        return new FileHandle(FabricLoader.getInstance().getConfigDir().toFile());
     }
 
     @Override
-    public Path getGameDir() {
-        return FabricLoader.getInstance().getGameDir();
+    public FileHandle getGameDir() {
+        return new FileHandle(FabricLoader.getInstance().getGameDir().toFile());
     }
 
     @Override
     public Result<Boolean> openImportDialog() {
-        JFileChooser jFileChooser = new JFileChooser();
-        jFileChooser.setFileSelectionMode(JFileChooser.FILES_ONLY);
-        jFileChooser.setMultiSelectionEnabled(true);
-        int result = jFileChooser.showOpenDialog(null);
-        if (result == JFileChooser.APPROVE_OPTION) {
-            File[] selectedFiles = jFileChooser.getSelectedFiles();
-            for (File file : selectedFiles) {
-                return XeoxLoader.get().importMod(file).map(v -> true, v -> v);
-            }
-            return Result.ok(false);
-        }
-        return Result.ok(false);
+        return Result.failure(new UnsupportedOperationException("Not implemented"));
     }
 
     @Override
@@ -182,11 +179,11 @@ public abstract class DesktopPlatform extends GamePlatform {
                 path = path.substring(0, path.length() - 1);
             }
 
-            QuantumClient.get().getResourceManager().importPackage(new File(new URI(path)).toPath());
+            QuantumClient.get().getResourceManager().importPackage(new FileHandle(new File(new URI(path))));
         } catch (Exception e) {
             for (Path rootPath : FabricLoader.getInstance().getModContainer(CommonConstants.NAMESPACE).orElseThrow().getRootPaths()) {
                 try {
-                    QuantumClient.get().getResourceManager().importPackage(rootPath);
+                    QuantumClient.get().getResourceManager().importPackage(new FileHandle(rootPath.toFile()));
                 } catch (IOException ex) {
                     crash(ex);
                 }
@@ -202,7 +199,7 @@ public abstract class DesktopPlatform extends GamePlatform {
             for (Path rootPath : mod.getRootPaths()) {
                 // Try to import a resource package for the given mod path.
                 try {
-                    QuantumClient.get().getResourceManager().importPackage(rootPath);
+                    QuantumClient.get().getResourceManager().importPackage(Gdx.files.internal("./"));
                 } catch (IOException e) {
                     CommonConstants.LOGGER.warn("Importing resources failed for path: {}", rootPath.toFile(), e);
                 }
@@ -247,7 +244,53 @@ public abstract class DesktopPlatform extends GamePlatform {
 
     @Override
     public Logger getLogger(String name) {
-        return new Slf4jLogger(LoggerFactory.getLogger(name));
+        return new Logger() {
+            private final org.slf4j.Logger logger = org.slf4j.LoggerFactory.getLogger(name);
+
+            @Override
+            public void log(Level level, String message, Throwable t) {
+                if (level == null) return;
+
+                if (t == null) {
+                    switch (level) {
+                        case TRACE:
+
+                            break;
+                        case DEBUG:
+                            logger.debug(message);
+                            break;
+                        case INFO:
+                            logger.info(message);
+                            break;
+                        case WARN:
+                            logger.warn(message);
+                            break;
+                        case ERROR:
+                            logger.error(message);
+                            break;
+                    }
+                    return;
+                }
+
+                switch (level) {
+                    case TRACE:
+                        logger.trace(message, t);
+                        break;
+                    case DEBUG:
+                        logger.debug(message, t);
+                        break;
+                    case INFO:
+                        logger.info(message, t);
+                        break;
+                    case WARN:
+                        logger.warn(message, t);
+                        break;
+                    case ERROR:
+                        logger.error(message, t);
+                        break;
+                }
+            }
+        };
     }
 
     @Override
@@ -298,5 +341,171 @@ public abstract class DesktopPlatform extends GamePlatform {
     @Override
     public boolean hasBackPanelRemoved() {
         return false;
+    }
+
+    @Override
+    public @NotNull <T> Promise<T> supplyAsync(Supplier<T> o) {
+        return new JavaPromise(CompletableFuture.supplyAsync(o));
+    }
+
+    @Override
+    public int cpuCores() {
+        return Runtime.getRuntime().availableProcessors();
+    }
+
+    @Override
+    public void halt(int code) {
+        Runtime.getRuntime().halt(code);
+    }
+
+    @Override
+    public void addShutdownHook(Runnable o) {
+        Runtime.getRuntime().addShutdownHook(new Thread(o));
+    }
+
+    @Override
+    public void nukeThreads() {
+        int secondsPassed = 0;
+        LongSet threadIds = new LongArraySet();
+        while (true) {
+            Set<Thread> threads = Thread.getAllStackTraces().keySet().stream().filter(t -> !t.isDaemon() && !t.isInterrupted() && t.getId() != Thread.currentThread().getId()).collect(Collectors.toSet());
+            for (Thread t : threads) {
+                if (threadIds.add(t.getId())) LOGGER.debug("{}: {}", t.getName(), t.getState());
+                t.interrupt();
+            }
+
+            if (threads.isEmpty()) {
+                break;
+            } else {
+                LOGGER.info("Waiting for {} threads to finish...", threads.size());
+                try {
+                    Thread.sleep(1000);
+                } catch (InterruptedException e) {
+                    break;
+                }
+
+                if (secondsPassed++ > 10) {
+                    LOGGER.warn("Still waiting for {} threads to finish. Terminating...", threads.size());
+                    GamePlatform.get().halt(1);
+                }
+            }
+        }
+    }
+
+    @Override
+    public void debugCrash(CrashLog log) {
+        for (Map.Entry<Thread, StackTraceElement[]> entry : Thread.getAllStackTraces().entrySet()) {
+            StackTraceElement[] stackTrace = entry.getValue();
+            String name = entry.getKey().getName();
+            long id = entry.getKey().getId();
+
+            Throwable throwable = new Throwable();
+            throwable.setStackTrace(stackTrace);
+
+            CrashCategory threadCategory = new CrashCategory("Thread #" + id + ": " + name, throwable);
+            log.addCategory(threadCategory);
+        }
+    }
+
+    @Override
+    public long maxMemory() {
+        return Runtime.getRuntime().maxMemory();
+    }
+
+    @Override
+    public long freeMemory() {
+        return Runtime.getRuntime().freeMemory();
+    }
+
+    @Override
+    public long[] getUuidElements(UUID value) {
+        return new long[]{
+                value.getMostSignificantBits(),
+                value.getLeastSignificantBits()
+        };
+    }
+
+    @Override
+    public UUID constructUuid(long msb, long lsb) {
+        return new UUID(msb, lsb);
+    }
+
+    @Override
+    public boolean hasImGui() {
+        return true;
+    }
+
+    @Override
+    public long totalMemory() {
+        return Runtime.getRuntime().totalMemory();
+    }
+
+    private class JavaPromise<T> implements CompletionPromise<T> {
+        private final CompletableFuture<T> completableFuture;
+
+        public JavaPromise(CompletableFuture<T> completableFuture) {
+            this.completableFuture = completableFuture;
+        }
+
+        @Override
+        public boolean isDone() {
+            return completableFuture.isDone();
+        }
+
+        @Override
+        public T join() {
+            return completableFuture.join();
+        }
+
+        @Override
+        public boolean isFailed() {
+            return completableFuture.isCompletedExceptionally();
+        }
+
+        @Override
+        public void complete(T value) {
+            completableFuture.complete(value);
+        }
+
+        @Override
+        public void fail(Throwable throwable) {
+
+        }
+
+        @Override
+        public boolean isCancelled() {
+            return completableFuture.isCancelled();
+        }
+
+        @Override
+        public boolean isCanceled() {
+            return false;
+        }
+
+        @Override
+        public void cancel() {
+            completableFuture.cancel(true);
+        }
+
+        @Override
+        public T getNow(T defaultValue) {
+            return null;
+        }
+
+        @Override
+        public Promise<T> whenComplete(BiConsumer<? super T, ? super Throwable> runnable) {
+            return new JavaPromise<>(completableFuture.whenComplete(runnable));
+        }
+
+        @Override
+        public <V> Promise<V> apply(BiFunction<? super T, ? super Throwable, ? extends V> function) {
+            return new JavaPromise<V>(completableFuture.handle((t, throwable) -> {
+                try {
+                    return function.apply(t, throwable);
+                } catch (Exception e) {
+                    return null;
+                }
+            }));
+        }
     }
 }
