@@ -1,8 +1,8 @@
 package dev.ultreon.quantum.block.state;
 
 import dev.ultreon.libs.commons.v0.util.EnumUtils;
-import dev.ultreon.ubo.types.DataType;
-import dev.ultreon.ubo.types.StringType;
+import dev.ultreon.quantum.ubo.types.DataType;
+import dev.ultreon.quantum.ubo.types.StringType;
 
 public class EnumPropertyKey<T extends Enum<T> & StringSerializable> extends StatePropertyKey<T> {
     public EnumPropertyKey(String name, Class<T> enumClass) {
@@ -25,7 +25,7 @@ public class EnumPropertyKey<T extends Enum<T> & StringSerializable> extends Sta
 
     @Override
     public void load(BlockState blockState, DataType<?> value) {
-        blockState.with(this, EnumUtils.byName((String) value.getValue(), allPossibleValues().getFirst()));
+        blockState.with(this, EnumUtils.byName((String) value.getValue(), allPossibleValues().get(0)));
     }
 
     @Override
